# blitzy-bluez

./: .gitignore  CODE_REVIEW.md  Cargo.toml  PROJECT_GUIDE.md  SETUP.md  catalog-info.yaml  clippy.toml  mkdocs.yml  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
benches/: btmon_throughput.rs  gatt_discovery.rs  headphone_audio.rs  mgmt_latency.rs  startup.rs
blitzy/documentation/: Project Guide.md  Technical Specifications.md
crates/bluetooth-meshd/: Cargo.toml
crates/bluetooth-meshd/src/: agent.rs  appkey.rs  cfgmod.rs  crypto.rs  crypto_mesh.rs  dbus.rs  keyring.rs  lib.rs  main.rs  manager.rs  mesh.rs  mesh_config.rs  mesh_dbus.rs  model.rs  net.rs  net_keys.rs  node.rs  pb_adv.rs  provision.rs  rpl.rs  transport.rs  util.rs
crates/bluetooth-meshd/src/config/: json.rs  mod.rs
crates/bluetooth-meshd/src/io/: generic.rs  mgmt.rs  mod.rs  unit.rs
crates/bluetooth-meshd/src/models/: config_server.rs  friend.rs  mod.rs  prv_beacon.rs  remote_prov.rs
crates/bluetooth-meshd/src/provisioning/: acceptor.rs  initiator.rs  mod.rs  pb_adv.rs
crates/bluetoothctl/: Cargo.toml
crates/bluetoothctl/src/: admin.rs  adv_monitor.rs  advertising.rs  agent.rs  assistant.rs  cmd_adapter.rs  cmd_admin.rs  cmd_advertise.rs  cmd_device.rs  cmd_gatt.rs  cmd_mgmt.rs  cmd_monitor.rs  cmd_player.rs  cmd_scan.rs  display.rs  gatt.rs  hci.rs  lib.rs  main.rs  mgmt.rs  player.rs  print.rs  proxy.rs  shell.rs  telephony.rs
crates/bluetoothd/: Cargo.toml
crates/bluetoothd/src/: adapter.rs  adv_monitor.rs  advertising.rs  agent.rs  battery.rs  bearer.rs  btio.rs  config.rs  dbus_common.rs  device.rs  error.rs  gatt_client.rs  gatt_database.rs  lib.rs  log.rs  main.rs  plugin.rs  profile.rs  rfkill.rs  sdpd.rs  service.rs  set.rs  storage.rs
crates/bluetoothd/src/dbus_iface/: adapter1.rs  advertising.rs  agent.rs  battery.rs  device1.rs  gatt.rs  mod.rs  profile_mgr.rs
crates/bluetoothd/src/gatt/: client.rs  database.rs  mod.rs  settings.rs
crates/bluetoothd/src/legacy_gatt/: att.rs  gatt.rs  gattrib.rs  mod.rs
crates/bluetoothd/src/plugins/: admin.rs  autopair.rs  hostname.rs  mod.rs  neard.rs  policy.rs  sixaxis.rs
crates/bluetoothd/src/profiles/: audio.rs  battery.rs  deviceinfo.rs  gap.rs  iap.rs  input.rs  midi.rs  mod.rs  network.rs  ranging.rs  scanparam.rs
crates/bluetoothd/src/profiles/audio/: a2dp.rs  asha.rs  avctp.rs  avdtp.rs  avrcp.rs  bap.rs  bass.rs  ccp.rs  control.rs  csip.rs  gmap.rs  hfp.rs  mcp.rs  media.rs  micp.rs  mod.rs  player.rs  sink.rs  source.rs  telephony.rs  tmap.rs  transport.rs  vcp.rs
crates/bluetoothd/src/sdp/: client.rs  database.rs  mod.rs  server.rs  xml.rs
crates/bluetoothd/tests/fixtures/: bluetooth_info_le_public.ini
crates/bluez-emulator/: Cargo.toml
crates/bluez-emulator/src/: btdev.rs  bthost.rs  hciemu.rs  le.rs  lib.rs  phy.rs  serial.rs  server.rs  smp.rs  vhci.rs
crates/bluez-shared/: Cargo.toml
crates/bluez-shared/benches/: crypto_bench.rs  gatt_bench.rs  iov_bench.rs
crates/bluez-shared/src/: ad.rs  addr.rs  att.rs  bap.rs  bass.rs  btsnoop.rs  crypto.rs  csip.rs  error.rs  gap.rs  gmap.rs  hfp.rs  io.rs  iso.rs  l2cap.rs  lib.rs  log.rs  mainloop.rs  mcp.rs  micp.rs  pcap.rs  rfcomm.rs  ringbuf.rs  sco.rs  shell.rs  tester.rs  timeout.rs  tmap.rs  util.rs  uuid.rs  vcp.rs
crates/bluez-shared/src/att/: mod.rs  transport.rs  types.rs
crates/bluez-shared/src/audio/: asha.rs  bap.rs  bass.rs  ccp.rs  csip.rs  gmap.rs  mcp.rs  micp.rs  mod.rs  tmap.rs  vcp.rs
crates/bluez-shared/src/capture/: btsnoop.rs  mod.rs  pcap.rs
crates/bluez-shared/src/crypto/: aes_cmac.rs  ecc.rs  mod.rs
crates/bluez-shared/src/device/: mod.rs  uhid.rs  uinput.rs
crates/bluez-shared/src/gatt/: client.rs  db.rs  helpers.rs  mod.rs  server.rs
crates/bluez-shared/src/hci/: crypto.rs  events.rs  mod.rs  opcodes.rs  structs.rs  transport.rs
crates/bluez-shared/src/mgmt/: client.rs  defs.rs  mod.rs
crates/bluez-shared/src/profiles/: battery.rs  gap.rs  hfp.rs  mod.rs  rap.rs
crates/bluez-shared/src/socket/: bluetooth_socket.rs  mod.rs
crates/bluez-shared/src/sys/: bluetooth.rs  bnep.rs  cmtp.rs  ffi_helpers.rs  hci.rs  hidp.rs  iso.rs  l2cap.rs  mgmt.rs  mod.rs  rfcomm.rs  sco.rs
crates/bluez-shared/src/util/: ad.rs  crc.rs  eir.rs  endian.rs  mod.rs  queue.rs  ringbuf.rs  uuid.rs
crates/bluez-tools/: Cargo.toml
crates/bluez-tools/src/: bnep_tester.rs  gap_tester.rs  hci_tester.rs  iso_tester.rs  l2cap_tester.rs  lib.rs  mgmt_tester.rs  rfcomm_tester.rs  sco_tester.rs  smp_tester.rs  tester.rs  testutil.rs  userchan_tester.rs
crates/bluez-tools/tests/: integration.rs
crates/btmon/: Cargo.toml
crates/btmon/src/: analyze.rs  control.rs  crc.rs  display.rs  hwdb.rs  keys.rs  lib.rs  main.rs  packet.rs
crates/btmon/src/backends/: ellisys.rs  hcidump.rs  jlink.rs  mod.rs
crates/btmon/src/dissectors/: a2dp.rs  att.rs  avctp.rs  avdtp.rs  bnep.rs  l2cap.rs  ll.rs  lmp.rs  mod.rs  rfcomm.rs  sdp.rs
crates/btmon/src/packet/: att.rs  hci.rs  l2cap.rs  mod.rs  sdp.rs  smp.rs
crates/btmon/src/sys/: mod.rs  terminal.rs
crates/obexd/: Cargo.toml
crates/obexd/src/: client.rs  ftp.rs  gobex.rs  irmc.rs  lib.rs  main.rs  manager.rs  map.rs  opp.rs  pbap.rs  server.rs  transfer.rs
crates/obexd/src/client/: mod.rs  profiles.rs  session.rs  transfer.rs
crates/obexd/src/obex/: apparam.rs  header.rs  mod.rs  packet.rs  session.rs  transfer.rs
crates/obexd/src/plugins/: bluetooth.rs  filesystem.rs  ftp.rs  map.rs  mod.rs  opp.rs  pbap.rs  sync.rs
crates/obexd/src/server/: mod.rs  service.rs  transport.rs
doc/: bluetoothctl-mgmt.rst  bluetoothctl-monitor.rst  bluetoothctl.rst  btmon.rst  coding-style.rst  index.md  org.bluez.AdminPolicyStatus.rst  org.bluez.Thermometer.rst  org.bluez.ThermometerManager.rst  org.bluez.ThermometerWatcher.rst  project-guide.md  test-coverage.txt  unsafe-code-audit.rst
docs/: index.md
scripts/: build_release.sh  headphone_connect.sh  install.sh  run_benchmarks.sh  uninstall.sh  unsafe_audit.sh  verify.sh
scripts/dbus/: org.bluez.conf  (+2 more)
src/: lib.rs
systemd/: bluetooth.service
(+47 files in other folders)
