[workspace]
resolver = "3"
members = [
    "crates/bluez-shared",
    "crates/bluetoothd",
    "crates/bluetoothctl",
    "crates/btmon",
    "crates/bluetooth-meshd",
    "crates/obexd",
    "crates/bluez-emulator",
    "crates/bluez-tools",
]

[workspace.package]
version = "5.86.0"
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://git.kernel.org/pub/scm/bluetooth/bluez.git"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.50", features = ["full"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
nix = { version = "0.29", features = ["socket", "ioctl", "net"] }
libc = "0.2"
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rustyline = "14"
inventory = "0.3"
libloading = "0.8"
ring = "0.17"
criterion = { version = "0.5", features = ["html_reports"] }
zerocopy = { version = "0.8", features = ["derive"] }
bitflags = "2.6"
bytes = "1.7"
thiserror = "2.0"
tokio-stream = "0.1"
futures = "0.3"
quick-xml = "0.37"
md-5 = "0.10"
# AAP 0.6.1 deviation: aes, cmac, and p256 are justified additions not in the
# original dependency inventory.  ring 0.17 (the AAP-specified crypto crate)
# only exposes AES-GCM — it cannot perform the raw AES-ECB block cipher needed
# by Bluetooth SMP functions e(), ah(), c1(), s1(), etc.  Similarly,
# ring::agreement::EphemeralPrivateKey does not expose raw private key bytes
# required for BT HCI LE Generate DHKey.  These three crates fill those gaps
# with minimal additional dependency surface.
aes = "0.8"
cmac = "0.7"
ccm = "0.5"
p256 = { version = "0.13", features = ["ecdh"] }
rand = "0.8"

# Root package — enables workspace-level integration tests in tests/
[package]
name = "bluez"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "bluez"
path = "src/lib.rs"

[dev-dependencies]
zbus = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
bluez-shared = { path = "crates/bluez-shared" }
obexd = { path = "crates/obexd" }
aes = { workspace = true }
cmac = { workspace = true }
ccm = { workspace = true }
tempfile = "3.15"
libc = { workspace = true }
nix = { workspace = true }

[[test]]
name = "test_gdbus_client"
path = "tests/unit/test_gdbus_client.rs"

[[test]]
name = "test_eir"
path = "tests/unit/test_eir.rs"

[[test]]
name = "test_queue"
path = "tests/unit/test_queue.rs"

[[test]]
name = "test_ringbuf"
path = "tests/unit/test_ringbuf.rs"

[[test]]
name = "test_ecc"
path = "tests/unit/test_ecc.rs"

[[test]]
name = "test_mesh_crypto"
path = "tests/unit/test_mesh_crypto.rs"

[[test]]
name = "test_crypto"
path = "tests/unit/test_crypto.rs"

[[test]]
name = "test_battery"
path = "tests/unit/test_battery.rs"

[[test]]
name = "test_gobex_apparam"
path = "tests/unit/test_gobex_apparam.rs"

[[test]]
name = "test_crc"
path = "tests/unit/test_crc.rs"

[[test]]
name = "test_hfp"
path = "tests/unit/test_hfp.rs"

[[test]]
name = "test_uhid"
path = "tests/unit/test_uhid.rs"

[[test]]
name = "test_uuid"
path = "tests/unit/test_uuid.rs"

[[test]]
name = "test_mgmt"
path = "tests/unit/test_mgmt.rs"

[[test]]
name = "btsnoop_replay_test"
path = "tests/integration/btsnoop_replay_test.rs"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
