[package]
name = "bluetooth-meshd"
version = "5.86.0"
edition = "2024"
description = "Bluetooth Mesh daemon — Rust rewrite of bluetooth-meshd from BlueZ v5.86"
license = "LGPL-2.1-or-later"
publish = false

[[bin]]
name = "bluetooth-meshd"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { version = "1.50", features = ["rt", "net", "io-util", "time", "signal", "sync", "macros"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-ini = "0.21"
nix = { version = "0.29", features = ["socket", "ioctl", "net", "signal"] }
libc = "0.2"
thiserror = "2.0"
bitflags = "2.6"
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[lints]
workspace = true
