[package]
name = "bluetooth-meshd"
version = "5.86.0"
edition = "2024"
description = "Bluetooth Mesh daemon — Rust rewrite of bluetooth-meshd from BlueZ v5.86"
license = "LGPL-2.1-or-later"
publish = false

[[bin]]
name = "bluetooth-meshd"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-ini = { workspace = true }
nix = { workspace = true, features = ["signal", "time"] }
libc = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
aes = { workspace = true }
cmac = { workspace = true }
ccm = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []

[lints]
workspace = true
