[package]
name = "bluetoothctl"
version = "5.86.0"
edition = "2024"
description = "BlueZ interactive Bluetooth control client — Rust rewrite of bluetoothctl"
license = "GPL-2.0-or-later"
publish = false

[[bin]]
name = "bluetoothctl"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { version = "1.50", features = ["full"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
rustyline = "14"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"

[features]
default = []

[lints]
workspace = true
