[package]
name = "bluetoothd"
version = "5.86.0"
edition = "2024"
description = "BlueZ Bluetooth daemon — manages adapters, devices, pairing, profiles, and D-Bus services"
license = "GPL-2.0-or-later"
publish = false

[[bin]]
name = "bluetoothd"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { version = "1.50", features = ["full"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
inventory = "0.3"
libloading = "0.8"
rust-ini = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.29", features = ["socket", "ioctl", "net", "signal"] }
libc = "0.2"
thiserror = "2.0"
bitflags = "2.6"
bytes = "1.7"
futures = "0.3"
tokio-stream = "0.1"
quick-xml = "0.37"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[lints]
workspace = true
