[package]
name = "bluez-emulator"
version = "5.86.0"
edition = "2024"
description = "HCI emulator library for BlueZ Rust — virtual Bluetooth controllers via VHCI for integration testing"
license = "LGPL-2.1-or-later"
publish = false

[lib]
name = "bluez_emulator"
path = "src/lib.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { version = "1.50", features = ["full"] }
nix = { version = "0.29", features = ["socket", "ioctl", "net", "uio"] }
libc = "0.2"
tracing = "0.1"
bitflags = "2.6"
bytes = "1.7"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[lints]
workspace = true
