[package]
name = "bluez-shared"
version = "5.86.0"
edition = "2024"
description = "Shared Bluetooth protocol library for BlueZ Rust — FFI bindings, protocol engines, crypto, transport abstractions, and utilities"
license = "LGPL-2.1-or-later"
publish = false

[lib]
name = "bluez_shared"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
nix = { version = "0.29", features = ["socket", "ioctl", "net", "uio", "signal"] }
libc = "0.2"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
rust-ini = "0.21"
rustyline = "14"
tracing = "0.1"
tracing-subscriber = "0.3"
zerocopy = { version = "0.8", features = ["derive"] }
bitflags = "2.6"
bytes = "1.7"
thiserror = "2.0"
tokio-stream = "0.1"
futures = "0.3"
aes = "0.8"
cmac = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[lints]
workspace = true
