[package]
name = "bluez-shared"
version = "5.86.0"
edition = "2024"
description = "Shared Bluetooth protocol library for BlueZ Rust — FFI bindings, protocol engines, crypto, transport abstractions, and utilities"
license = "LGPL-2.1-or-later"
publish = false

[lib]
name = "bluez_shared"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
nix = { workspace = true, features = ["uio", "signal"] }
libc = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
rust-ini = { workspace = true }
rustyline = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zerocopy = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
# AAP 0.6.1 deviation: aes, cmac, and p256 are justified additions — see root
# Cargo.toml for full rationale.  ring 0.17 cannot perform raw AES-ECB (needed
# for BT SMP crypto functions) or expose raw ECC private key bytes (needed for
# HCI LE Generate DHKey).
aes = { workspace = true }
cmac = { workspace = true }
p256 = { workspace = true }
# AAP 0.6.1 note: inventory and libloading are listed under bluez-shared in the
# AAP dependency table, but their actual consumers are the binary crates
# (bluetoothd, obexd) that implement the plugin framework.  bluez-shared's
# tester module uses standard #[test] without inventory.  The deps are correctly
# placed in the binary crate Cargo.toml files that consume them.

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[features]
default = []

[lints]
workspace = true
