[package]
name = "btmon"
version = "5.86.0"
edition = "2024"
description = "Bluetooth packet monitor — complete Rust rewrite of btmon from BlueZ v5.86"
license = "LGPL-2.1-or-later"
publish = false

[[bin]]
name = "btmon"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { version = "1.50", features = ["rt", "net", "io-util", "signal", "time", "macros", "sync"] }
nix = { version = "0.29", features = ["socket", "ioctl", "net", "uio", "fs", "process", "signal", "term"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
bitflags = "2.6"
bytes = "1.7"
thiserror = "2.0"
libloading = "0.8"
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
udev = []

[lints]
workspace = true
