[package]
name = "btmon"
version = "5.86.0"
edition = "2024"
description = "Bluetooth packet monitor — complete Rust rewrite of btmon from BlueZ v5.86"
license = "LGPL-2.1-or-later"
publish = false

[[bin]]
name = "btmon"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { workspace = true }
nix = { workspace = true, features = ["uio", "fs", "process", "signal", "term"] }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
libloading = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
udev = []

[lints]
workspace = true
