[package]
name = "obexd"
version = "5.86.0"
edition = "2024"
description = "BlueZ OBEX daemon — Object Exchange protocol server and client for Bluetooth file/data transfer profiles"
license = "GPL-2.0-or-later"
publish = false

[[bin]]
name = "obexd"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { version = "1.50", features = ["full"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
bytes = "1.7"
bitflags = "2.6"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
nix = { version = "0.29", features = ["socket", "ioctl", "net"] }
inventory = "0.3"
libloading = "0.8"
md-5 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[lints]
workspace = true
