[package]
name = "obexd"
version = "5.86.0"
edition = "2024"
description = "BlueZ OBEX daemon — Object Exchange protocol server and client for Bluetooth file/data transfer profiles"
license = "GPL-2.0-or-later"
publish = false

[lib]
name = "obexd"
path = "src/lib.rs"

[[bin]]
name = "obexd"
path = "src/main.rs"

[dependencies]
bluez-shared = { path = "../bluez-shared" }
tokio = { workspace = true }
zbus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
thiserror = { workspace = true }
bytes = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
nix = { workspace = true }
inventory = { workspace = true }
libloading = { workspace = true }
md-5 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []

[lints]
workspace = true
